--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div>  
+        
+        
+    </div>
+
+
+
     <script src ="home.js"> </script>
 </body>
 </html>
