--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
 
     <div>  
-        
+        <label>Enter First Name</label>
+        <input type="text" name="firstName">
         
     </div>
 
