--- a/index.html
+++ b/index.html
@@ -7,12 +7,26 @@
     <title>Document</title>
 </head>
 <body>
-
+  
     <div>  
-        <label>Enter First Name</label>
-        <input type="text" name="firstName">
+        <label >Enter First Name</label>
+        <input type="text" name="firstName" placeholder="Enter First Name here">
+
+        <br>
+        <br>
+        <Lable> Enter Last Name </Lable>
+        <input type="text" name="lastName" placeholder="Enter Last Name Here">
         
     </div>
+
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+        Iste sed officiis possimus atque! Ipsam libero repellat perspiciatis provident velit.
+         Aperiam omnis repellendus tenetur! 
+         Sapiente quasi aliquid voluptates repellat explicabo minus.
+    </p>
+
+    <button click="addAge"> Age </button>
 
 
 
