--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          Sapiente quasi aliquid voluptates repellat explicabo minus.
     </p>
 
-    <button click="addAge"> Age </button>
+    <button onclick="addAge()"> Age </button>
 
 
 
