--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   
     <div>  
         <label >Enter First Name</label>
-        <input type="text" name="firstName" placeholder="Enter First Name here">
+        <input type="text" name="firstName"
+         placeholder="Enter First Name here" 
+         id = "fName">
 
         <br>
         <br>
         <Lable> Enter Last Name </Lable>
-        <input type="text" name="lastName" placeholder="Enter Last Name Here">
+        <input type="text" name="lastName" placeholder="Enter Last Name Here" id="lName">
         
     </div>
 
