Created Unordered list of Given

--- a/index.html
+++ b/index.html
@@ -22,11 +22,19 @@
     </div>
 
     <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-        Iste sed officiis possimus atque! Ipsam libero repellat perspiciatis provident velit.
-         Aperiam omnis repellendus tenetur! 
-         Sapiente quasi aliquid voluptates repellat explicabo minus.
+        A ball is thrown upwards with an initial velocity of 8.00 m/s 
+        at an angle of 30 degrees with horizontal from a cliff of height 5.00 m
+        above the ground. The ball lands on the ground. How far from the 
+        base of the cliff does the ball land if you are on a planet with half the 
+        mass of earth but the same radius.
     </p>
+
+    <ul>
+        <label bold>Given</label>
+        <li>Initial Velocity = 8 m/s </li> 
+        <li>Angle = 8 degrees</li> 
+        <li>Height = 5 m </li> 
+    </ul>
 
     <button onclick="addAge()"> Age </button>
 
