--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     </p>
 
     <ul>
-        <label bold>Given</label>
-        <li>Initial Velocity = 8 m/s </li> 
-        <li>Angle = 8 degrees</li> 
-        <li>Height = 5 m </li> 
+        <label > <b>Given</b></label>
+        <li>Intial Velocity = 8 m/s</li>
+        <li>Initial Velocity x direction = 8cos(30) = 6.9 m/s </li>
+        <li>Initial Velocity y direction = 8sin(30) = 4 m/s</li>
+        <li>Change in y = -5 m </li> 
     </ul>
 
     <button onclick="addAge()"> Age </button>
