Calculates default questions answer

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 
     <div>  
         <label >Initial Velocity</label>
-        <input type="text" name="firstName"
+        <input type="text"
+         name="firstName"
          placeholder="Enter Initial Velocity"
          id = "InV">
     </div>
@@ -53,11 +54,12 @@
         
     </div>
 
-    <div>
-        
-    </div>
 
     <button onclick="calculateChangeInX()"> Calculate </button>
+
+    <div>
+        <h3> The answer is:  <span id="solution"></span></h3>
+    </div>
 
 
 
