--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="style.css" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
   
-
+    <div class="container">
+    <div class="paragraph">
     <p>
         A ball is thrown upwards with an initial velocity of 8.00 m/s 
         at an angle of 30 degrees with horizontal from a cliff of height 5.00 m
@@ -16,7 +18,7 @@
         base of the cliff does the ball land if you are on a planet with half the 
         mass of earth but the same radius?
     </p>
-
+    </div>
     <ul>
         <label > <b>Given</b></label>
         <li>Intial Velocity = 8 m/s</li>
@@ -59,6 +61,8 @@
 
     <div>
         <h3> The answer is:  <span id="solution"></span></h3>
+    </div>
+
     </div>
 
 
