change container around

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <li>Initial Velocity y direction = 8sin(30) = 4 m/s</li>
         <li>Change in y = -5 m </li> 
     </ul>
-
+    </div>
+    <div class="container-2">
     <div>  
         <label >Initial Velocity</label>
         <input type="text"
@@ -55,6 +56,7 @@
         id="angl">
         
     </div>
+   
 
 
     <button onclick="calculateChangeInX()"> Calculate </button>
