--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
 
 
 
-    <div id="output">   
+    <div id="container-output">   
         
         <p>
             When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
-            $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
+            $x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$
         </p>
     
     </div>
