--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <div id="container-output">   
         
         <p>
-            When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are
-            $x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$
+            When $a \ne 0$, there are two solutions to \(ax^2 + bx + c = 0\) and they are 
+            $$x = {-b \pm \sqrt{b^2-4ac} \over 2a}.$$
         </p>
     
     </div>
