--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
     <div class="container-1">
     <ul>
         <label > <b>Given</b></label>
-        <li>Intial Velocity = 8 m/s</li>
-        <li>Height = 5 m</li>
-        <li>Angle = 30 degrees</li>
-        <li>Mass = (1/2) Mass of Earth</li>
+        <li> $V_0 =$ Intial Velocity = $8$ $m/s$</li>
+        <li>$h =$ Height = $5$ $m$</li>
+        <li>$\theta= 30^{\circ}$</li>
+        <li>$m =$ Mass = $\frac{1}{2}$ Mass of Earth</li>
         <label> <b>Derived</b></label>
-        <li>Initial Velocity x direction = 8cos(30) = 6.9 m/s </li>
-        <li>Initial Velocity y direction = 8sin(30) = 4 m/s</li>
-        <li>Change in y = -5 m </li> 
+        <li>$V_{0x} =$ Initial Velocity x direction = 8cos(30) = $6.9$ $m/s$ </li>
+        <li>$V_{0y} =$ Initial Velocity y direction = 8sin(30) = $4$ $m/s$</li>
+        <li>$\Delta_y =$ Change in y = $-5$ $m$ </li> 
     </ul>
     </div>
     <div class="container-2">
