--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="style.css" rel="stylesheet">
+    <script src ="sql.js"> </script>
     <title>Document</title>
     
     
@@ -38,7 +39,7 @@
     </div>
 
     <div class="database">  
-        <button onclick="display()"> DataBase </button>
+        <button onclick="run()"> DataBase </button>
     <p id="test"></p>
 
     </div>
@@ -112,7 +113,6 @@
 
 
     <script src ="home.js"> </script>
-    <script src ="sql.js"> </script>
    
 </body>
 </html>
